<resources>
    <string name="app_name">Agenda</string>
    <string name="todo">TODO</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="email">E-mail</string>
    <string name="salvar_cliente">Salvar o cliente</string>
    <string name="remover">Remover</string>
    <string name="cpf">CPF</string>
    <string name="nascimento">Data de Nascimento</string>
    <string name="uf">UF</string>
</resources>