<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height ="wrap_content"
    android:layout_width ="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/activity_formulario_cliente_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:maxLength="50" />

    <EditText
        android:id="@+id/activity_formulario_cliente_telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/telefone"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:maxLength="11" />

    <EditText
        android:id="@+id/activity_formulario_cliente_cpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/cpf"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="11" />

    <EditText
        android:id="@+id/activity_formulario_cliente_nascimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/nascimento"
        android:importantForAutofill="no"
        android:inputType="date"
        android:maxLength="8" />

    <EditText
        android:id="@+id/activity_formulario_cliente_uf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/uf"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:maxLength="2" />

</LinearLayout></ScrollView>